--- a/h5editor/src/css/common.css
+++ b/h5editor/src/css/common.css
@@ -1,15 +1,9 @@
 /* reset */
-@font-face {
-    font-family: 'icon-pc';
-    src:url('/back/dist/fonts/icon-pc.eot');
-    src:url('/back/dist/fonts/icon-pc.eot?iefix') format('embedded-opentype'),
-    url('/back/dist/fonts/icon-pc.woff') format('woff'),
-    url('/back/dist/fonts/icon-pc.ttf') format('truetype'),
-    url('/back/dist/fonts/icon-pc.svggu') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 
+clearfix:after, .clearfix:before {
+    content: " ";
+    display: table;
+}
 
 @font-face {
     font-family: 'FZHei-B01S';
@@ -120,21 +114,34 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 /* 主弹出层 */
 .dialog_con{position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.4);z-index: 9998;}
 .dialog_con .dialog_bg{width: 100%;height: 100%;position: absolute;}
-.dialog_con .dialog_main_con{width: 750px;height: 540px;background: #f7f7f7;border-radius: 6px;box-shadow: 0 5px 15px rgba(0,0,0,0.5);box-sizing: border-box;position: relative;display: flex;flex-direction: column;}
+.dialog_con .dialog_main_con{
+    width: 550px;
+    height: 440px;
+    background: #fff;
+    box-sizing: border-box;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    border-radius: 1px;
+    box-shadow: 0 5px 10px rgba(0,0,0,.2);
+    border: solid 1px #e9e9e9;
+    -webkit-box-shadow: 0 0 10px rgba(0,0,0,0.4);
+    box-shadow: 0 0 10px rgba(0,0,0,0.4);
+}
 .dialog_con .dialog_main_con.small{width: 450px!important;height: 300px!important;}
-.dialog_con .dialog_main_con .dialog_head{position: relative;border-bottom: 1px solid #aaa;padding: 0 20px;height: 44px;}
+.dialog_con .dialog_main_con .dialog_head{position: relative;padding: 0 20px;height: 44px;}
 .dialog_con .dialog_main_con .dialog_head h2{color: #526069;font-size: 20px;font-weight: 300;line-height: 44px;display: inline-block;vertical-align: middle;}
 .dialog_con .dialog_main_con .dialog_head p{font-size: 12px;color: #526069;line-height: 22px;display: inline-block;vertical-align: middle;margin-left: 15px;margin-top: 5px;}
 .dialog_con .dialog_main_con .dialog_head .dialog_link{position: absolute;right: 20px;top: 12px;}
 .dialog_con .dialog_main_con .dialog_main{flex: 1;position: relative;}
-.dialog_con .dialog_main_con .dialog_bottom{width: 100%;height: 44px;border-top: 1px solid #aaa;}
-.dialog_con .dialog_main_con .dialog_bottom .advance_browser{display: block;text-align: right;width: 100%;line-height: 44px;font-size: 12px;padding-right: 20px;box-sizing: border-box;margin-bottom: 20px;}
-.dialog_con .dialog_main_con .dialog_bottom .advance_browser a{color: #01d7b2;text-decoration: underline;}
+.dialog_con .dialog_main_con .dialog_bottom{width: 100%;height: 44px;border-top: 1px solid #eee;}
+.dialog_con .dialog_main_con .dialog_bottom .advance_browser{display: block;text-align: right;width: 100%;line-height: 44px;font-size: 13px;padding-right: 20px;box-sizing: border-box;margin-bottom: 20px;}
+.dialog_con .dialog_main_con .dialog_bottom .advance_browser a{color: #00BCD4;text-decoration: underline;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn{font-size: 0;box-sizing: border-box;position: absolute;right: 20px;}
-.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 6px;margin: 9px 8px 0;background: #01d7b2;box-sizing: border-box;padding: 0 12px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
+.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 1px;margin: 9px 8px 0;background: #00BCD4;box-sizing: border-box;padding: 0 12px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child{background: #76838e;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child:hover{background: #8c8c8c;}
-.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:last-child:hover{background: #44cb83;}
+.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:last-child:hover{background: #00BCD4;}
 
 
 /* 侧边列表 */
@@ -142,7 +149,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .side_con.left{left: 0;}
 .side_con.right{right: 0;}
 .side_con .item{display: flex;flex-direction: column;}
-.side_con .head{height: 40px;line-height: 40px;text-align: center;color: #666;background: #F7F7F7;font-size: 16px;width: 100%;}
+.side_con .head{height: 40px;line-height: 40px;text-align: center;color: #666;background: #F7F7F7;font-size: 14px;width: 100%;}
 .side_con .item.pages_list{}
 .side_con .item.pages_list ul{position: relative;width: 280px;padding: 0 20px;box-sizing: border-box;overflow-y: auto;flex:1;}
 .side_con .item.pages_list ul li{display: block;height: 36px;line-height: 36px;margin-top: 10px;color: #666;text-align: center;background: #dcdcdc;cursor: pointer;width: 100%;border-radius: 4px;font-weight: bold;}
@@ -159,24 +166,41 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 
 
 /* 登录／注册 */
-.user{width: 300px;margin: 0 auto;margin-top: 50px;position: relative;}
+.user{width: 300px;margin: 0 auto;margin-top: 20px;position: relative;}
 .user .erro_text{font-size: 12px;color: #ff5151;line-height: 18px;position: absolute;bottom: -20px;}
 .user .item{margin-bottom: 15px;position: relative;width: 100%;}
 .user .item .erro_input{border: 1px solid #ff5151!important;}
 .user .item label{font-size: 12px;line-height: 32px;display: block;}
-.user .item input[type='text'],.user .item input[type='password']{width: 300px;font-size: 12px;border-radius: 4px;border: 1px solid #ccd5db;background: #fff;padding: 7px 12px;line-height: 1.5;box-sizing: border-box;}
+.user .item input[type='text'],.user .item input[type='password']{
+    border: 1px solid #ccd5db;
+    background: #fff;
+    padding: 7px 12px;
+    line-height: 1.5;
+    padding: 12px 10px 12px 18px;
+    margin: 0;
+    height: 14px;
+    line-height: 14px;
+    width: 158px;
+    border: 1px solid #dedede;
+    font-size: 14px;
+    color: #666;
+    transition: .3s;
+    width: 300px;
+    height: 40px;}
 .user .item span{font-size: 12px;color: #526069;display: inline-block;vertical-align: middle;}
 .user .item input[type='checkbox']{width: 16px;height: 16px;display: inline-block;vertical-align: middle;margin: 0 3px;}
 .user .item input[type='checkbox']:nth-child(3){margin-left: 20px;}
 .user .item a{font-size: 12px;color: #526069;text-decoration: underline;cursor: pointer;display: inline-block;float: right;}
 
 /* 按钮 */
-.btn{display: block;height: 40px;line-height: 40px;box-sizing: border-box;font-size: 12px;color: #fff;background: #01d7b2;border-radius: 5px;border: 1px solid #01d7b2;-webkit-transition: all ease 0.3s;transition: all ease 0.3s;}
-.btn:hover{background: #fff;color: #01d7b2;}
+.btn{display: block;height: 40px;line-height: 40px;box-sizing: border-box;font-size: 12px;color: #fff;background: #00BCD4;border-radius: 5px;border: 1px solid #00BCD4;-webkit-transition: all ease 0.3s;transition: all ease 0.3s;}
+.btn:hover{background: #00BCD4;color: #FFF;}
 .user_btn{width: 300px;margin: 25px auto;text-align: center;}
 
 /* 三角 */
-.caret{display: inline-block;width: 0;height: 0;margin-left: 2px;vertical-align: middle;border-top: 4px dashed;border-top: 4px solid \9;border-right: 4px solid transparent;border-left: 4px solid transparent;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;transform-origin: 50% 50%;-webkit-transform-origin: 50% 50%;}
+.caret{display: inline-block;width: 0;height: 0;margin-left: 2px;vertical-align: middle;border-top: 4px dashed;border-top: 4px solid \9;border-right: 4px solid transparent;border-left: 4px solid transparent;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;transform-origin: 50% 50%;-webkit-transform-origin: 50% 50%;
+    position: relative;
+    top: 8px;}
 .caret_close{transform: rotate(-90deg);}
 .caret_open{transform: rotate(0deg);}
 
@@ -188,10 +212,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 /* 定位 */
 .vertical_center {position: absolute;top: 50%;-webkit-transform: translateY(-50%);}
 .horizontal_center {position: absolute;left: 50%;-webkit-transform: translateX(-50%);}
-.all_center {position: absolute;top: 50%;left: 50%;-webkit-transform: translate(-50%, -50%);}
+.all_center {position: relative;margin: 50px auto;}
 
 /* tips提示 */
-.awesomeTips {position: absolute;box-sizing: border-box;-webkit-box-sizing: border-box;padding: 8px 15px;color: #fff;font-size: 12px;background: rgba(0, 0, 0, 0.7);border-radius: 8px;z-index: 9999;}
+.awesomeTips {position: absolute;box-sizing: border-box;-webkit-box-sizing: border-box;padding: 8px 15px;color: #fff;font-size: 12px;background: rgba(0, 0, 0, 0.7);border-radius: 1px;z-index: 9999;}
 .awesomeTips.tipsInLeft {-webkit-animation: tipsInLeft 0.4s ease 0.2s both;animation: tipsInLeft 0.4s ease 0.2s both;}
 .awesomeTips.tipsInRight {-webkit-animation: tipsInRight 0.4s ease 0.2s both;animation: tipsInRight 0.4s ease 0.2s both;}
 .awesomeTips.tipsInTop {-webkit-animation: tipsInTop 0.4s ease 0.2s both;animation: tipsInTop 0.4s ease 0.2s both;}
