--- a/h5editor/src/css/dropdown.css
+++ b/h5editor/src/css/dropdown.css
@@ -1,3 +1,203 @@
+/*/ICON BEGIN/*/
+@font-face {
+    font-family: 'icon-pc';
+    src:url('/back/dist/fonts/icon-pc.eot?59lb71');
+    src:url('/back/dist/fonts/icon-pc.eot?#iefix59lb71') format('embedded-opentype'),
+    /*url('/back/dist/fonts/icon-pc.woff?59lb71') format('woff'),*/
+    /*url('/back/dist/fonts/icon-pc.ttf?59lb71') format('truetype'),*/
+    url('/back/dist/fonts/icon-pc.svg?59lb71#icon-pc') format('svg');
+    font-weight: normal;
+    font-style: normal;
+}
+.sui-icon[class^="icon-pc-"],
+.sui-icon[class*=" icon-pc-"] {
+    font-family: 'icon-pc';
+    speak: none;
+    font-style: normal;
+    font-weight: normal;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    /* Better Font Rendering =========== */
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+}
+.icon-pc-calendar:before {
+    content: "\e60a";
+}
+.icon-pc-loading:before {
+    content: "\e600";
+}
+.icon-pc-enter:before {
+    content: "\e602";
+}
+.icon-pc-ww:before {
+    content: "\c600";
+}
+.icon-pc-sound:before {
+    content: "\c601";
+}
+.icon-pc-settings:before {
+    content: "\c602";
+}
+.icon-pc-right:before {
+    content: "\c603";
+}
+.icon-pc-right-circle:before {
+    content: "\e601";
+}
+.icon-pc-refresh:before {
+    content: "\c604";
+}
+.icon-pc-question-circle:before {
+    content: "\c605";
+}
+.icon-pc-prev:before {
+    content: "\c606";
+}
+.icon-pc-next:before {
+    content: "\c607";
+}
+.icon-pc-list:before {
+    content: "\c608";
+}
+.icon-pc-light:before {
+    content: "\c609";
+}
+.icon-pc-info-circle:before {
+    content: "\c60a";
+}
+.icon-pc-forbidden:before {
+    content: "\c60b";
+}
+.icon-pc-error:before {
+    content: "\c60c";
+}
+.icon-pc-error-circle:before {
+    content: "\c60d";
+}
+.icon-pc-chevron-top:before {
+    content: "\c60e";
+}
+.icon-pc-chevron-right:before {
+    content: "\c60f";
+}
+.icon-pc-chevron-left:before {
+    content: "\c610";
+}
+.icon-pc-chevron-bottom:before {
+    content: "\c611";
+}
+.icon-pc-bell:before {
+    content: "\c612";
+}
+.icon-pc-checkbox-checked:before {
+    content: "\e607";
+}
+.icon-pc-checkbox-unchecked:before {
+    content: "\e605";
+}
+.icon-pc-checkbox-halfchecked:before {
+    content: "\e606";
+}
+.icon-pc-radio-checked:before {
+    content: "\e604";
+}
+.icon-pc-radio-unchecked:before {
+    content: "\e603";
+}
+.icon-pc-right-triangle-sign:before {
+    content: "\e608";
+}
+.icon-pc-error-triangle-sign:before {
+    content: "\e609";
+}
+.icon-pc-text:before {
+    content: "\e60b";
+}
+.icon-pc-copy:before {
+    content: "\e60c";
+}
+.icon-pc-bottom:before {
+    content: "\e60d";
+}
+.icon-pc-top:before {
+    content: "\e60e";
+}
+.icon-pc-picture:before {
+    content: "\e60f";
+}
+.icon-pc-hot-area:before {
+    content: "\e610";
+}
+.icon-pc-rotate:before {
+    content: "\e611";
+}
+.icon-pc-chevron-right-circle-sign:before {
+    content: "\e612";
+}
+.icon-pc-chevron-right-circle:before {
+    content: "\e613";
+}
+.icon-pc-a:before {
+    content: "\e614";
+}
+.icon-pc-plus-circle-sign:before {
+    content: "\e615";
+}
+.icon-pc-plus-circle:before {
+    content: "\e616";
+}
+.icon-pc-chevron-down-circle-sign:before {
+    content: "\e617";
+}
+.icon-pc-chevron-down-circle:before {
+    content: "\e618";
+}
+.icon-pc-arrow-up-circle-sign:before {
+    content: "\e619";
+}
+.icon-pc-arrow-up-circle:before {
+    content: "\e61a";
+}
+.icon-pc-arrow-down-circle-sign:before {
+    content: "\e61b";
+}
+.icon-pc-arrow-down-circle:before {
+    content: "\e61c";
+}
+.icon-pc-underline:before {
+    content: "\e61d";
+}
+.icon-pc-italic:before {
+    content: "\e61e";
+}
+.icon-pc-black:before {
+    content: "\e61f";
+}
+.icon-pc-paint-bucket:before {
+    content: "\e620";
+}
+.icon-pc-doc:before {
+    content: "\e621";
+}
+.icon-pc-th:before {
+    content: "\e622";
+}
+.icon-pc-hot-area-sign:before {
+    content: "\e623";
+}
+.icon-pc-edit-circle:before {
+    content: "\e624";
+}
+.icon-pc-undo:before {
+    content: "\e625";
+}
+.icon-pc-redo:before {
+    content: "\e626";
+}
+/*/ICON END/*/
+
 .sui-dropup,
 .sui-dropdown {
     position: relative;
@@ -68,7 +268,7 @@
 }
 .sui-dropup .caret:before,
 .sui-dropdown .caret:before {
-    content: "\c611";
+    content: " ";
 }
 .sui-dropup.dropdown-bordered,
 .sui-dropdown.dropdown-bordered {
@@ -394,8 +594,8 @@
     text-align: center;height: 28px;
     vertical-align: middle;
     cursor: pointer;
-    color: #333333;
-    background-color: #eeeeee;
+    color: #717171;
+    background-color: #fafafa;
     filter: progid:DXImageTransform.Microsoft.gradient(enabled = false);
     border: 1px solid #e1e1e1;
     -webkit-border-radius: 2px;
@@ -414,8 +614,10 @@
     border: 1px solid #eaeaea;
 }
 .sui-btn.actived{
-    background: #76838e;
-    color: #FFF;
+    outline: 0;
+    background-image: none;
+    border:1px solid gray;
+    /*box-shadow: inset 0 2px 2px rgba(0,0,0,.125)*/
 }
 
 
@@ -516,7 +718,7 @@
     line-height: 26px;
 }
 .sui-btn-group .sui-btn + .sui-btn {
-    margin-left: -1px;
+    margin-left: -1px !important;
 }
 .sui-btn-group .sui-btn,
 .sui-btn-group .sui-dropdown-menu,
@@ -640,3 +842,214 @@
     background-color: #373737;
     border-color: #2b2b2b;
 }
+
+
+/*///TOOLTIPS BENGIN///*/
+.tooltip-footer {
+    padding: 7px 10px 5px;
+    margin-bottom: 0;
+    text-align: right;
+    background-color: #f1f4f5;
+    -webkit-border-radius: 0 0 6px 6px;
+    -moz-border-radius: 0 0 6px 6px;
+    border-radius: 0 0 6px 6px;
+    -webkit-box-shadow: inset 0 1px 0 #ffffff;
+    -moz-box-shadow: inset 0 1px 0 #ffffff;
+    box-shadow: inset 0 1px 0 #ffffff;
+}
+.tooltip-footer:before,
+.tooltip-footer:after {
+    display: table;
+    content: "";
+    line-height: 0;
+}
+.tooltip-footer:after {
+    clear: both;
+}
+.tooltip-footer .sui-btn + .sui-btn {
+    margin-left: 7px;
+    margin-bottom: 0;
+}
+.tooltip-footer .sui-btn-group .sui-btn + .sui-btn {
+    margin-left: -1px;
+}
+.tooltip-footer .btn-block + .btn-block {
+    margin-left: 0;
+}
+.type-style.default .tooltip-inner,
+.type-style.normal .tooltip-inner,
+.type-style.confirm .tooltip-inner {
+    background-color: #2e3e4e;
+    color: #FFF;
+}
+.type-style.attention .tooltip-inner {
+    background-color: #fef1e3;
+    color: #d7842b;
+}
+.type-style .tooltip-inner {
+    padding: 9px 11px;
+    text-decoration: none;
+    text-align: left;
+    font-weight: normal;
+}
+.sui-tooltip {
+    position: absolute;
+    z-index: 1030;
+    display: block;
+    visibility: visible;
+    border: 2px solid #2e3e4e;
+    opacity: 0;
+    word-break: break-all;
+    word-wrap: break-word;
+    -webkit-border-radius: 0px;
+    -moz-border-radius: 0px;
+    border-radius: 0px;font-size: 12px !important;
+}
+.sui-tooltip.in {
+    /*.opacity(100);*/
+    opacity: 1;
+}
+.sui-tooltip.top {
+    margin-top: -3px;
+}
+.sui-tooltip.right {
+    margin-left: 3px;
+}
+.sui-tooltip.bottom {
+    margin-top: 3px;
+}
+.sui-tooltip.left {
+    margin-left: -3px;
+}
+.sui-tooltip.default .tooltip-inner,
+.sui-tooltip.normal .tooltip-inner,
+.sui-tooltip.confirm .tooltip-inner {
+    background-color: #2e3e4e;
+    color: #fff;
+}
+.sui-tooltip.attention .tooltip-inner {
+    background-color: #fef1e3;
+    color: #d7842b;
+}
+.sui-tooltip .tooltip-inner {
+    padding: 2px 3px;
+    text-decoration: none;
+    text-align: left;
+    font-weight: normal;
+}
+.tooltip-arrow {
+    position: absolute;
+    width: 0;
+    height: 0;
+    border-color: transparent;
+    border-style: solid;
+}
+.tooltip-only-arrow {
+    position: relative;
+    border: 2px solid #b2b2b2;
+}
+.tooltip-only-arrow.default .tooltip-inner,
+.tooltip-only-arrow.normal .tooltip-inner,
+.tooltip-only-arrow.confirm .tooltip-inner {
+    background-color: #2e3e4e;
+    color: #222222;
+}
+.tooltip-only-arrow.attention .tooltip-inner {
+    background-color: #fef1e3;
+    color: #d7842b;
+}
+.tooltip-only-arrow .tooltip-inner {
+    padding: 2px 3px;
+    text-decoration: none;
+    text-align: left;
+    font-weight: normal;
+}
+.sui-tooltip.attention,
+.tooltip-only-arrow.attention {
+    border: none;
+}
+.sui-tooltip.attention .cover,
+.tooltip-only-arrow.attention .cover {
+    display: none;
+}
+.sui-tooltip.top .tooltip-arrow,
+.tooltip-only-arrow.top .tooltip-arrow {
+    bottom: -7px;
+    left: 50%;
+    margin-left: -6px;
+    border-width: 6px 6px 0;
+    border-top-color: #2e3e4e;
+}
+.sui-tooltip.top .tooltip-arrow .tooltip-arrow.cover,
+.tooltip-only-arrow.top .tooltip-arrow .tooltip-arrow.cover {
+    margin-left: -4px;
+    border-top-color: #2e3e4e;
+    top: -7px;
+}
+.sui-tooltip.top.attention .tooltip-arrow,
+.tooltip-only-arrow.top.attention .tooltip-arrow {
+    border-top-color: #fef1e3;
+    bottom: -5px;
+}
+.sui-tooltip.right .tooltip-arrow,
+.tooltip-only-arrow.right .tooltip-arrow {
+    top: 50%;
+    left: -7px;
+    margin-top: -6px;
+    border-width: 6px 6px 6px 0;
+    border-right-color: #b2b2b2;
+}
+.sui-tooltip.right .tooltip-arrow .tooltip-arrow.cover,
+.tooltip-only-arrow.right .tooltip-arrow .tooltip-arrow.cover {
+    margin-top: -4px;
+    border-right-color: #ffffff;
+    left: 0;
+}
+.sui-tooltip.right.attention .tooltip-arrow,
+.tooltip-only-arrow.right.attention .tooltip-arrow {
+    border-right-color: #fef1e3;
+    left: -5px;
+}
+.sui-tooltip.left .tooltip-arrow,
+.tooltip-only-arrow.left .tooltip-arrow {
+    top: 50%;
+    right: -7px;
+    margin-top: -6px;
+    border-width: 6px 0 6px 6px;
+    border-left-color: #b2b2b2;
+}
+.sui-tooltip.left .tooltip-arrow .tooltip-arrow.cover,
+.tooltip-only-arrow.left .tooltip-arrow .tooltip-arrow.cover {
+    margin-top: -4px;
+    border-left-color: #ffffff;
+    left: -7px;
+}
+.sui-tooltip.left.attention .tooltip-arrow,
+.tooltip-only-arrow.left.attention .tooltip-arrow {
+    border-left-color: #fef1e3;
+    right: -5px;
+}
+.sui-tooltip.bottom .tooltip-arrow,
+.tooltip-only-arrow.bottom .tooltip-arrow {
+    top: -7px;
+    left: 50%;
+    margin-left: -6px;
+    border-width: 0 6px 6px;
+    border-bottom-color: #b2b2b2;
+}
+.sui-tooltip.bottom .tooltip-arrow .tooltip-arrow.cover,
+.tooltip-only-arrow.bottom .tooltip-arrow .tooltip-arrow.cover {
+    margin-left: -4px;
+    border-bottom-color: #ffffff;
+    top: 0;
+}
+.sui-tooltip.bottom.attention .tooltip-arrow,
+.tooltip-only-arrow.bottom.attention .tooltip-arrow {
+    border-bottom-color: #fef1e3;
+    top: -5px;
+}
+.sui-tooltip .tooltip-arrow.cover,
+.tooltip-only-arrow .tooltip-arrow.cover {
+    border-width: 4px;
+}
+/*///TOOLTIPS END///*/
