--- a/views/index.html
+++ b/views/index.html
@@ -1,44 +1,34 @@
 <!DOCTYPE html>
-<html>
+<html id="app">
 <head>
     <meta charset="utf-8">
-    <meta id="GoH5ViewPort" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta id="h5editor" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
     <title>
-        <%= workData.title %>
+        {{title}}
     </title>
-    <meta name="keywords" content="<%= workData.about.keyWords %>">
-    <meta name="description" content="<%= workData.about.desc %>">
-    <link rel="stylesheet" type="text/css" href="/front/dist/css/goh5.min.css?ver=1.0.2">
+    <meta name="keywords" content="{{about.keyWords }}">
+    <meta name="description" content="{{about.desc }}">
+    <link rel="stylesheet" type="text/css" href="./dist/css/goh5.min.css?ver=1.0.2">
 </head>
-<body>
+<body >
+
     <!--  缩略图 -->
     <div class="shareImgWrap">
-        <img data-src="<%= workData.about.thumbnail %>" />
     </div>
-    <!--  缩略图 -->
-    <!-- 主页面 -->
-    <div class="swiper-container" id="wrapAll">
+    <div class="swiper-container" id="wrapAll" style="border: 1px solid gray;">
         <div class="swiper-wrapper">
-            <% workData.mainCode.pages.forEach(function(page){ %>
-            <div class="swiper-slide" style="<%- page.main.background.match(/img/) === null ? 'background-color: ' + page.main.background : 'background-image: url(' + page.main.background + ')'%>">
-                <div class="items_con all_center" style="width: 320px;height: 486px;">    
-                	<% page.items.forEach(function(item){ %>
-    				<div id="<%- item.id %>" class="<%- item.class %>" type="<%- item.type %>" style="<%- item.style %>" attr="<%= JSON.stringify(item.attr) %>">
-    					<%- item.content.replace(/src/ig,'data-src') %>
+            <div class="swiper-slide" style="" v-for="page in mainCode.pages">
+                <div class="items_con all_center" style="">
+    				<div v-for="item in page.items" class="item" type="{{item.type}}" :style="item.sty"  >
+                        {{{item.content}}}
     				</div>
-                	<% }) %>
                 </div>
             </div>
-            <% }) %>
         </div>
     </div>
-    <!-- 主页面 -->
-    <!-- 箭头 -->
-    <div id="arrow"><img data-src="/front/dist/img/arrow.png"></div>
-    <!-- 箭头 -->
-    <!-- 加载 -->
+    <div id="arrow"><img data-src="./dist/img/arrow.png"></div>
     <div class="loading_con">
         <div class="all_center loading_center">
             <div class="all_center">
@@ -48,16 +38,12 @@
             </div>
         </div>
     </div>
-    <!-- 加载 -->
-    <!-- 音乐 -->
-    <audio id="audio_ele" autoplay="autoplay" src="<%= workData.mainCode.wholeAttr.bgmusic %>"></audio>
-    <img class="audio_btn play" style="display: none;" src="/front/dist/img/music.png">
-    <!-- 音乐 -->
-    <script type="text/javascript">
-        var defaultConfig = <%- JSON.stringify(workData.setConfig) %>;
-    </script>
-    <script type="text/javascript" src="/front/dist/js/vendor.min.js?ver=1.0.2"></script>
-    <script type="text/javascript" src="/front/dist/js/goh5.min.js?ver=1.0.2"></script>
+    <img class="audio_btn play" style="display: none;" src="./dist/img/music.png">
+
+    <script type="text/javascript" src="./dist/js/data.js?ver=1.0.2"></script>
+    <script src="https://npmcdn.com/vue/dist/vue.js"></script>
+    <script type="text/javascript" src="./dist/js/vendor.min.js?ver=1.0.2"></script>
+    <script type="text/javascript" src="./dist/js/goh5.min.js?ver=1.0.2"></script>
 </body>
 
 </html>
