--- a/views/src/css/common.css
+++ b/views/src/css/common.css
@@ -63,9 +63,9 @@ html, body{width: 100%;height: 100%;position: relative;}
 }
 
 /* 定位 */
-.vertical_center {position: absolute;top: 50%;-webkit-transform: translateY(-50%);}
-.horizontal_center {position: absolute;left: 50%;-webkit-transform: translateX(-50%);}
-.all_center {position: absolute;top: 50%;left: 50%;-webkit-transform: translate(-50%, -50%);}
+/*.vertical_center {position: absolute;top: 50%;-webkit-transform: translateY(-50%);}
+.horizontal_center {position: absolute;left: 50%;-webkit-transform: translateX(-50%);}*/
+/*.all_center {position: absolute;top: 50%;left: 50%;-webkit-transform: translate(-50%, -50%);}*/
 
 
 
