--- a/h5editor/src/css/common.css
+++ b/h5editor/src/css/common.css
@@ -138,7 +138,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .dialog_con .dialog_main_con .dialog_bottom .advance_browser{display: block;text-align: right;width: 100%;line-height: 44px;font-size: 13px;padding-right: 20px;box-sizing: border-box;margin-bottom: 20px;}
 .dialog_con .dialog_main_con .dialog_bottom .advance_browser a{color: #00BCD4;text-decoration: underline;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn{font-size: 0;box-sizing: border-box;position: absolute;right: 20px;}
-.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 1px;margin: 9px 8px 0;background: #00BCD4;box-sizing: border-box;padding: 0 12px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
+.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 1px;margin: 9px 0px 0 10px;background: #00BCD4;box-sizing: border-box;padding: 0 15px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child{background: #76838e;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child:hover{background: #8c8c8c;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:last-child:hover{background: #00BCD4;}
