--- a/views/render.html
+++ b/views/render.html
@@ -2,7 +2,7 @@
 <html id="app">
 <head>
     <meta charset="utf-8">
-    <meta id="h5editor" name="viewport" content="width=320, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta id="h5editor" name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
     <meta name="format-detection" content="telephone=no">
     <meta name="renderer" content="webkit">
     <title>
@@ -21,8 +21,11 @@
         <div class="swiper-wrapper" >
             <div class="swiper-slide" style="" v-for="page in mainCode.pages" >
                 <div class="items_con all_center" style="">
-    				<div v-for="item in page.items" class="item" type="{{item.type}}" :style="item.sty"  >
-                        {{{item.content}}}
+    				<div v-for="item in page.items" class="item" type="{{item.type}}"    >
+                        <p v-if="item.type=='TXT'" :style="item.sty">
+                            {{{item.content}}}
+                        </p>
+                        <img v-if="item.type=='IMG'" :style="item.sty"  :src="'/front/dist'+item.content" alt="">
     				</div>
                 </div>
             </div>
