--- a/views/src/css/common.css
+++ b/views/src/css/common.css
@@ -23,6 +23,9 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .clearfix {*zoom: 1}
 .hide, .v-hide {display: none !important;}
 
+
+
+body{overflow: hidden;}
 /* swiper初始样式 */
 html, body{width: 100%;height: 100%;position: relative;}
 .swiper-container{width: 100%;height: 100%;}
