--- a/h5editor/src/css/common.css
+++ b/h5editor/src/css/common.css
@@ -1,9 +1,19 @@
 /* reset */
 
-clearfix:after, .clearfix:before {
+.clearfix:after, .clearfix:before {
     content: " ";
     display: table;
 }
+
+.drag_rect_mouse{
+    height: 1px;
+    width: 1px;
+    position: absolute;
+    background: rgba(255,255,255,0.1);
+    border: 1px solid rgba(80,80,80,1);
+    z-index: 9999;
+}
+
 
 @font-face {
     font-family: 'FZHei-B01S';
