--- a/h5editor/src/css/common.css
+++ b/h5editor/src/css/common.css
@@ -155,7 +155,7 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 
 
 /* 侧边列表 */
-.side_con{position: fixed;background: #fff;display: flex;flex-direction:column;width: 280px;box-sizing: border-box;height: 100%;padding-bottom: 60px;top: 60px;}
+.side_con{position: fixed;background: #fff;display: flex;flex-direction:column;width: 280px;box-sizing: border-box;height: 100%;padding-bottom: 60px;top: 60px;z-index: 999999;}
 .side_con.left{left: 0;}
 .side_con.right{right: 0;border-left:1px solid #eee; }
 .side_con .item{display: flex;flex-direction: column;}
@@ -284,5 +284,10 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .fromRight-enter,.fromRight-leave{transform: translateX(100%);-webkit-transform: translateX(100%);}
 
 
-
+#app{    position: fixed;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    min-width: 1200px;}
 
