--- a/h5editor/src/css/dropdown.css
+++ b/h5editor/src/css/dropdown.css
@@ -835,8 +835,8 @@
     border-color: #2eaf56;
 }
 .sui-btn-group.open .dropdown-toggle.btn-info {
-    background-color: #46b8da;
-    border-color: #31b0d5;
+    background-color: #007fff;
+    border-color: #007fff;
 }
 .sui-btn-group.open .dropdown-toggle.btn-inverse {
     background-color: #373737;
