--- a/views/index.html
+++ b/views/index.html
@@ -10,6 +10,7 @@
     </title>
     <meta name="keywords" content="{{about.keyWords }}">
     <meta name="description" content="{{about.desc }}">
+    <link href="//cdn.bootcss.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./dist/css/H5Editor.min.css?ver=1.0.2">
 </head>
 <body >
