--- a/h5editor/src/css/common.css
+++ b/h5editor/src/css/common.css
@@ -104,7 +104,8 @@ input {outline: 0;font-size: 14px;margin: 0;padding: 0;box-sizing: border-box;}
 html, body, form, fieldset, p, div, h1, h2, h3, h4, h5, h6 {-webkit-text-size-adjust: none}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {display: block}
 a, input, select, button, textarea {font-family: 'Microsoft YaHei', arial, helvetica, sans-serif}
-a {text-decoration: none;color: #3990e6}
+a {text-decoration: none;color: #007fff}
+a:hover{text-decoration: none;color: #007fff}
 body {font-family: 'Microsoft YaHei', arial, helvetica, sans-serif;-webkit-text-size-adjust: none;-webkit-user-select: none;font-size: 14px;background: #eee;}
 ol, ul {list-style: none}
 blockquote, q {quotes: none}
@@ -122,11 +123,11 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .clearfix {*zoom: 1}
 .hide, .v-hide {display: none !important;}
 /* 主弹出层 */
-.dialog_con{position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.4);z-index: 9998;}
+.dialog_con{position: fixed;top: 0;left: 0;width: 100%;height: 100%;background: rgba(0,0,0,0.1);z-index: 9998;}
 .dialog_con .dialog_bg{width: 100%;height: 100%;position: absolute;}
 .dialog_con .dialog_main_con{
-    width: 550px;
-    height: 440px;
+    width: 350px;
+    /*max-height: 440px;*/
     background: #fff;
     box-sizing: border-box;
     position: relative;
@@ -140,22 +141,22 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 }
 .dialog_con .dialog_main_con.small{width: 450px!important;height: 300px!important;}
 .dialog_con .dialog_main_con .dialog_head{position: relative;padding: 0 20px;height: 44px;}
-.dialog_con .dialog_main_con .dialog_head h2{color: #526069;font-size: 20px;font-weight: 300;line-height: 44px;display: inline-block;vertical-align: middle;}
+.dialog_con .dialog_main_con .dialog_head h2{color: #333;font-size: 20px;font-weight: 300;line-height: 44px;display: inline-block;vertical-align: middle;}
 .dialog_con .dialog_main_con .dialog_head p{font-size: 12px;color: #526069;line-height: 22px;display: inline-block;vertical-align: middle;margin-left: 15px;margin-top: 5px;}
-.dialog_con .dialog_main_con .dialog_head .dialog_link{position: absolute;right: 20px;top: 12px;}
+.dialog_con .dialog_main_con .dialog_head .dialog_link{position: absolute;right: 20px;top: 9px;}
 .dialog_con .dialog_main_con .dialog_main{flex: 1;position: relative;}
 .dialog_con .dialog_main_con .dialog_bottom{width: 100%;height: 44px;border-top: 1px solid #eee;}
 .dialog_con .dialog_main_con .dialog_bottom .advance_browser{display: block;text-align: right;width: 100%;line-height: 44px;font-size: 13px;padding-right: 20px;box-sizing: border-box;margin-bottom: 20px;}
-.dialog_con .dialog_main_con .dialog_bottom .advance_browser a{color: #00BCD4;text-decoration: underline;}
+.dialog_con .dialog_main_con .dialog_bottom .advance_browser a{text-decoration: underline;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn{font-size: 0;box-sizing: border-box;position: absolute;right: 20px;}
-.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 1px;margin: 9px 0px 0 10px;background: #00BCD4;box-sizing: border-box;padding: 0 15px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
+.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li{display: inline-block;vertical-align: top;line-height: 26px;color: #fff;border-radius: 1px;margin: 9px 0px 0 10px;background: #007fff;box-sizing: border-box;padding: 0 15px;font-size: 12px;cursor: pointer;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child{background: #76838e;}
 .dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:first-child:hover{background: #8c8c8c;}
-.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:last-child:hover{background: #00BCD4;}
+.dialog_con .dialog_main_con .dialog_bottom .dialog_btn li:last-child:hover{background: #007fff;}
 
 
 /* 侧边列表 */
-.side_con{position: fixed;background: #fff;display: flex;flex-direction:column;width: 280px;box-sizing: border-box;height: 100%;padding-bottom: 60px;top: 60px;z-index: 999999;}
+.side_con{position: fixed;background: #fff;display: flex;flex-direction:column;width: 280px;box-sizing: border-box;height: 100%;padding-bottom: 60px;top: 60px;z-index: 999;}
 .side_con.left{left: 0;}
 .side_con.right{right: 0;border-left:1px solid #eee; }
 .side_con .item{display: flex;flex-direction: column;}
@@ -164,9 +165,9 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 .side_con .item.pages_list ul{position: relative;width: 280px;padding: 0 20px;box-sizing: border-box;overflow-y: auto;flex:1;}
 .side_con .item.pages_list ul li{display: block;height: 36px;line-height: 36px;margin-top: 10px;color: #666;text-align: center;background: #dcdcdc;cursor: pointer;width: 100%;border-radius: 4px;font-weight: bold;}
 .side_con .item.pages_list ul li:last-child{margin-bottom: 10px;}
-.side_con .item.pages_list ul li.active {background: #0fcebd;color: #fff}
-.side_con .item.nav_bottom{width: 280px;text-align: center;height: 44px;background: #3f4a58;font-size: 16px;}
-.side_con .item.nav_bottom a{color: #10c3b3;display: block;cursor: pointer;line-height: 44px;}
+.side_con .item.pages_list ul li.active {background: #007fff;color: #fff}
+.side_con .item.nav_bottom{width: 280px;text-align: center;height: 44px;background: #007fff;font-size: 16px;}
+.side_con .item.nav_bottom a{color: #007fff;display: block;cursor: pointer;line-height: 44px;}
 .side_con .item.nav_bottom a img{display: inline-block;vertical-align: middle;margin-right: 10px;width: 16px;height: 16px;}
 .side_con .item.nav_bottom a span{display: inline-block;vertical-align: middle;}
 
@@ -176,11 +177,11 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 
 
 /* 登录／注册 */
-.user{width: 300px;margin: 0 auto;margin-top: 20px;position: relative;}
+.user{width: 300px;margin: 0 auto;position: relative;}
 .user .erro_text{font-size: 12px;color: #ff5151;line-height: 18px;position: absolute;bottom: -20px;}
 .user .item{margin-bottom: 15px;position: relative;width: 100%;}
 .user .item .erro_input{border: 1px solid #ff5151!important;}
-.user .item label{font-size: 12px;line-height: 32px;display: block;}
+.user .item label{font-size: 14px;line-height: 32px;display: block;font-weight: normal;}
 .user .item input[type='text'],.user .item input[type='password']{
     border: 1px solid #ccd5db;
     background: #fff;
@@ -190,24 +191,25 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
     margin: 0;
     height: 14px;
     line-height: 14px;
-    width: 158px;
+    width: 158px;border-radius: 2px;
     border: 1px solid #dedede;
     font-size: 14px;
     color: #666;
     transition: .3s;
     width: 300px;
     height: 40px;}
-.user .item input[type='text']:focus,.user .item input[type='password']:focus{border: 1px solid #00BCD4;}
+.user .item input[type='text']:focus,.user .item input[type='password']:focus{border: 1px solid #007fff;}
 
 .user .item span{font-size: 12px;color: #526069;display: inline-block;vertical-align: middle;}
 .user .item input[type='checkbox']{width: 16px;height: 16px;display: inline-block;vertical-align: middle;margin: 0 3px;}
 .user .item input[type='checkbox']:nth-child(3){margin-left: 20px;}
-.user .item a{font-size: 12px;color: #526069;text-decoration: underline;cursor: pointer;display: inline-block;float: right;}
+.user .item a{font-size: 13px;text-decoration: underline;cursor: pointer;display: inline-block;float: right;}
 
 /* 按钮 */
-.btn{display: block;height: 40px;line-height: 40px;box-sizing: border-box;font-size: 12px;color: #fff;background: #00BCD4;border-radius: 5px;border: 1px solid #00BCD4;-webkit-transition: all ease 0.3s;transition: all ease 0.3s;}
-.btn:hover{background: #00BCD4;color: #FFF;}
-.user_btn{width: 300px;margin: 25px auto;text-align: center;}
+.btn{display: block;height: 40px;line-height: 28px;box-sizing: border-box;font-size: 14px;color: #fff;background: #007fff;border-radius: 2px;border: 1px solid #007fff;-webkit-transition: all ease 0.3s;transition: all ease 0.3s;}
+.btn:hover{background: #2196F3;color: #FFF;}
+.user_btn{width: 300px;margin: 25px auto 10px;text-align: center;}
+
 
 /* 三角 */
 .caret{display: inline-block;width: 0;height: 0;margin-left: 2px;vertical-align: middle;border-top: 4px dashed;border-top: 4px solid \9;border-right: 4px solid transparent;border-left: 4px solid transparent;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;transform-origin: 50% 50%;-webkit-transform-origin: 50% 50%;
@@ -218,8 +220,8 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
 
 /* 右击菜单 */
 .context_menu{width: 120px;background: #fff;position: fixed;z-index: 999;border:1px solid #ddd;padding: 1px;box-shadow: 0 0 4px rgba(0,0,0,0.4);}
-.context_menu li{height: 32px;line-height: 32px;text-align: center;color: #01d7b2;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;cursor: pointer;}
-.context_menu li:hover{background: #01d7b2;color: #fff;}
+.context_menu li{height: 32px;line-height: 32px;text-align: center;color: #007fff;transition: all ease 0.2s;-webkit-transition: all ease 0.2s;cursor: pointer;}
+.context_menu li:hover{background: #007fff;color: #fff;}
 
 /* 定位 */
 .vertical_center {position: absolute;top: 50%;-webkit-transform: translateY(-50%);}
@@ -290,4 +292,4 @@ button::-moz-focus-inner, input::-moz-focus-inner {padding: 0;border: 0}
     top: 0;
     bottom: 0;
     min-width: 1200px;}
-
+.carousel-inner>.item>img, .carousel-inner>.item>a>img{width: 100%;}
